# semillero-dashboard

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package.json  validate-contract.sh
backend/: Dockerfile  docker-compose.yml  env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/middleware/: role_auth.py
backend/app/models/: course.py  coursework.py  reports.py  student.py  submission.py  user.py
backend/app/routers/: auth.py  courses.py  coursework.py  dependencies.py  health.py  reports.py  students.py  submissions.py  teachers.py  users.py
backend/app/services/: base.py  google_auth.py  google_driver.py  mock_driver.py  reports_service.py
backend/data/mock/: courses.json  coursework.json  students.json  submissions.json  user_profiles.json
backend/tests/: test_reports.py
frontend/: Dockerfile  docker-compose.yml  env.example  next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/coordinate/: page.tsx
frontend/src/app/courses/: page.tsx
frontend/src/components/: RoleGuard.tsx
frontend/src/contexts/: AuthContext.tsx  RoleContext.tsx
frontend/src/hooks/: useAuth.ts  useCohortProgress.ts  useCoordinatorStats.ts  useDashboardData.ts  useKPIs.ts  useOverviewStats.ts  useReportsStats.ts  useStudentStats.ts  useTeacherById.ts  useTeacherStats.ts
frontend/src/types/: index.ts
frontend/tests/e2e/: navigation.spec.ts  reports.spec.ts
workspace/: CONTRATO1LLM.md  CONTRATO2LLM.md  CONTRATO3LLM.md  CONTRATO4LLM.md
(+29 files in other folders)
